force-app/main/default/objects/Case/fields/Account_Enduser__c.field-meta.xml
<CustomField>
    <fullName>Account_Enduser__c</fullName>
    <label>Final Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>