force-app/main/default/objects/Case/fields/Account_Final_Customer__c.field-meta.xml
<CustomField>
    <fullName>Account_Final_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Final Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>