force-app/main/default/objects/Case/fields/Asset_Final_Customer__c.field-meta.xml
<CustomField>
    <fullName>Asset_Final_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Final Customer</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Asset_Vici__c.Account_Final_Customer__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account_Final_Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset_Vici__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>