force-app/main/default/objects/Case/fields/Asset_Final_Customer_Formula__c.field-meta.xml
<CustomField>
    <fullName>Asset_Final_Customer_Formula__c</fullName>
    <formula>IF(BEGINS(Asset_Final_Customer__r.Name,&quot;PA&quot;),&quot;MTL&quot;,
 IF(BEGINS(Asset_Final_Customer__r.Name,&quot;PB&quot;),&quot;MTL&quot;,
  IF(BEGINS(Asset_Final_Customer__r.Name,&quot;PC&quot;),&quot;MTL&quot;,
   IF(BEGINS(Asset_Final_Customer__r.Name,&quot;PD&quot;),&quot;MTL&quot;,
    IF(BEGINS(Asset_Final_Customer__r.Name,&quot;PE&quot;),&quot;MTL&quot;,
     IF(BEGINS(Asset_Final_Customer__r.Name,&quot;PF&quot;),&quot;MTL&quot;,
      IF(BEGINS(Asset_Final_Customer__r.Name,&quot;PG&quot;),&quot;MTL&quot;,
       IF(BEGINS(Asset_Final_Customer__r.Name,&quot;PH&quot;),&quot;MTP&quot;,
        IF(BEGINS(Asset_Final_Customer__r.Name,&quot;PK&quot;),&quot;MTL&quot;,
         IF(BEGINS(Asset_Final_Customer__r.Name,&quot;PM&quot;),&quot;MTL&quot;,
          IF(BEGINS(Asset_Final_Customer__r.Name,&quot;PN&quot;),&quot;MTL&quot;,
           IF(BEGINS(Asset_Final_Customer__r.Name,&quot;PT&quot;),&quot;MTL&quot;,
            IF(BEGINS(Asset_Final_Customer__r.Name,&quot;PQ&quot;),&quot;MTL&quot;,
             IF(BEGINS(Asset_Final_Customer__r.Name,&quot;PP&quot;),&quot;MTL&quot;,
              IF(BEGINS(Asset_Final_Customer__r.Name,&quot;PZ&quot;),&quot;METRIOS&quot;,
               IF(BEGINS(Asset_Final_Customer__r.Name,&quot;0&quot;),&quot;MTL&quot;,
                IF(BEGINS(Asset_Final_Customer__r.Name,&quot;&quot;),&quot;&quot;,&quot;&quot;
                )
               )
              )
             )
            )
           )
          )
         )
        )
       )
      )
     )
    )
   )
  )
 )
)</formula>
    <label>Asset Final Customer Formula</label>
    <type>Text</type>
</CustomField>