force-app/main/default/objects/Case/fields/Asset_Vici__c.field-meta.xml
<CustomField>
    <fullName>Asset_Vici__c</fullName>
    <label>Asset Vici</label>
    <length>255</length>
    <type>Text</type>
</CustomField>