force-app/main/default/objects/Case/fields/assigned_to__c.field-meta.xml
<CustomField>
    <fullName>assigned_to__c</fullName>
    <label>Academy owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IGNAZIO</fullName>
            </value>
            <value>
                <fullName>GLIB</fullName>
            </value>
            <value>
                <fullName>ALESSIO</fullName>
            </value>
            <value>
                <fullName>MATTEO</fullName>
            </value>
            <value>
                <fullName>altro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>