force-app/main/default/objects/Case/fields/Banca_Appoggio__c.field-meta.xml
<CustomField>
    <fullName>Banca_Appoggio__c</fullName>
    <label>Banca Appoggio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BPE</fullName>
            </value>
            <value>
                <fullName>UNICREDIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>