force-app/main/default/objects/Case/fields/Cap__c.field-meta.xml
<CustomField>
    <fullName>Cap__c</fullName>
    <label>Cap</label>
    <length>50</length>
    <type>Text</type>
</CustomField>