force-app/main/default/objects/Case/fields/CAP_Offerta__c.field-meta.xml
<CustomField>
    <fullName>CAP_Offerta__c</fullName>
    <label>CAP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>