force-app/main/default/objects/Case/fields/Causale__c.field-meta.xml
<CustomField>
    <fullName>Causale__c</fullName>
    <label>Causale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Materiale difettoso</fullName>
            </value>
            <value>
                <fullName>Materiale danneggiato</fullName>
            </value>
            <value>
                <fullName>Materiale non conforme</fullName>
            </value>
            <value>
                <fullName>Errore produzione</fullName>
            </value>
            <value>
                <fullName>Errore Progettazione</fullName>
                <label>Errore progettazione</label>
            </value>
            <value>
                <fullName>manomissione</fullName>
                <label>Manomissione</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>