force-app/main/default/objects/Case/fields/Causale_di_bollettazione__c.field-meta.xml
<CustomField>
    <fullName>Causale_di_bollettazione__c</fullName>
    <label>Causale di bollettazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sostituzione Garanzia CON reintegro</fullName>
            </value>
            <value>
                <fullName>Sostituzione Garanzia SENZA reintegro</fullName>
            </value>
            <value>
                <fullName>Conto Vendita</fullName>
            </value>
            <value>
                <fullName>C/Visione</fullName>
            </value>
            <value>
                <fullName>Omaggio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>