force-app/main/default/objects/Case/fields/Check_pezzo_rientrato__c.field-meta.xml
<CustomField>
    <fullName>Check_pezzo_rientrato__c</fullName>
    <label>Check pezzo rientrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>