force-app/main/default/objects/Case/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente NC</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Cliente NC)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>