force-app/main/default/objects/Case/fields/Codice_parte__c.field-meta.xml
<CustomField>
    <fullName>Codice_parte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Codice parte</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>