force-app/main/default/objects/Case/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destinatario</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Destinatario)</relationshipLabel>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>