force-app/main/default/objects/Case/fields/Corriere__c.field-meta.xml
<CustomField>
    <fullName>Corriere__c</fullName>
    <label>Corriere</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TNT Express consegna 1gg Estero (CEE)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>