force-app/main/default/objects/Case/fields/Costo_riparazione__c.field-meta.xml
<CustomField>
    <fullName>Costo_riparazione__c</fullName>
    <label>Costo riparazione</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>