force-app/main/default/objects/Case/fields/Costo_rottamazione__c.field-meta.xml
<CustomField>
    <fullName>Costo_rottamazione__c</fullName>
    <label>Costo rottamazione</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>