force-app/main/default/objects/Case/fields/Costo_vario__c.field-meta.xml
<CustomField>
    <fullName>Costo_vario__c</fullName>
    <label>Costo vario</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>