force-app/main/default/objects/Case/fields/Da_Gestire__c.field-meta.xml
<CustomField>
    <fullName>Da_Gestire__c</fullName>
    <formula>IF( Last_Modify_Name_Formula__c = &quot;System&quot; &amp;&amp; datevalue(Data_Ora_Ultima_Mail__c)= today(), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Da Gestire</label>
    <type>Checkbox</type>
</CustomField>