force-app/main/default/objects/Case/fields/Data_chiusura_NC__c.field-meta.xml
<CustomField>
    <fullName>Data_chiusura_NC__c</fullName>
    <label>Data chiusura NC</label>
    <type>Date</type>
</CustomField>