force-app/main/default/objects/Case/fields/Data_consegna_richiesta__c.field-meta.xml
<CustomField>
    <fullName>Data_consegna_richiesta__c</fullName>
    <label>Data consegna richiesta</label>
    <type>Date</type>
</CustomField>