force-app/main/default/objects/Case/fields/Data_di_consegna__c.field-meta.xml
<CustomField>
    <fullName>Data_di_consegna__c</fullName>
    <label>Data di consegna</label>
    <type>Date</type>
</CustomField>