force-app/main/default/objects/Case/fields/Data_effettiva_reintegro__c.field-meta.xml
<CustomField>
    <fullName>Data_effettiva_reintegro__c</fullName>
    <label>Data effettiva reintegro</label>
    <type>Date</type>
</CustomField>