force-app/main/default/objects/Case/fields/Data_Offerta__c.field-meta.xml
<CustomField>
    <fullName>Data_Offerta__c</fullName>
    <label>Data Offerta</label>
    <type>Date</type>
</CustomField>