force-app/main/default/objects/Case/fields/Data_Ora_Ultima_Mail__c.field-meta.xml
<CustomField>
    <fullName>Data_Ora_Ultima_Mail__c</fullName>
    <label>Data/Ora Ultima Mail</label>
    <type>DateTime</type>
</CustomField>