force-app/main/default/objects/Case/fields/Data_ordine__c.field-meta.xml
<CustomField>
    <fullName>Data_ordine__c</fullName>
    <label>Data ordine</label>
    <type>Date</type>
</CustomField>