force-app/main/default/objects/Case/fields/Data_prevista_reintegro__c.field-meta.xml
<CustomField>
    <fullName>Data_prevista_reintegro__c</fullName>
    <label>Data prevista reintegro</label>
    <type>Date</type>
</CustomField>