force-app/main/default/objects/Case/fields/Data_Richiesta_Intervento__c.field-meta.xml
<CustomField>
    <fullName>Data_Richiesta_Intervento__c</fullName>
    <label>Data Richiesta Intervento</label>
    <type>Date</type>
</CustomField>