force-app/main/default/objects/Case/fields/Data_rilevazione_NC__c.field-meta.xml
<CustomField>
    <fullName>Data_rilevazione_NC__c</fullName>
    <label>Data rilevazione NC</label>
    <type>Date</type>
</CustomField>