force-app/main/default/objects/Case/fields/Data_scheda_intervento__c.field-meta.xml
<CustomField>
    <fullName>Data_scheda_intervento__c</fullName>
    <label>Data scheda intervento</label>
    <type>Date</type>
</CustomField>