force-app/main/default/objects/Case/fields/Data_spedizione_prevista__c.field-meta.xml
<CustomField>
    <fullName>Data_spedizione_prevista__c</fullName>
    <label>Data spedizione prevista</label>
    <type>Date</type>
</CustomField>