force-app/main/default/objects/Case/fields/DDT_Fornitore__c.field-meta.xml
<CustomField>
    <fullName>DDT_Fornitore__c</fullName>
    <label>DDT Fornitore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>