force-app/main/default/objects/Case/fields/Descrizione_NC__c.field-meta.xml
<CustomField>
    <fullName>Descrizione_NC__c</fullName>
    <label>Descrizione NC</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>