force-app/main/default/objects/Case/fields/Descrizione_parte__c.field-meta.xml
<CustomField>
    <fullName>Descrizione_parte__c</fullName>
    <label>Descrizione parte</label>
    <length>100</length>
    <type>Text</type>
</CustomField>