force-app/main/default/objects/Case/fields/Descrizione_risoluzione__c.field-meta.xml
<CustomField>
    <fullName>Descrizione_risoluzione__c</fullName>
    <label>Descrizione risoluzione</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>