force-app/main/default/objects/Case/fields/Differenza_tra_arrivo_email_e_modifica__c.field-meta.xml
<CustomField>
    <fullName>Differenza_tra_arrivo_email_e_modifica__c</fullName>
    <formula>IF (ISBLANK(Data_Ora_Ultima_Mail__c), -1,
ROUND(Data_Ora_Ultima_Mail__c - LastModifiedDate,4)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Differenza tra arrivo email e modifica</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>