force-app/main/default/objects/Case/fields/Dimensione_collo_cm__c.field-meta.xml
<CustomField>
    <fullName>Dimensione_collo_cm__c</fullName>
    <label>Dimensione collo (cm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>