force-app/main/default/objects/Case/fields/Fornitore__c.field-meta.xml
<CustomField>
    <fullName>Fornitore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fornitore NC</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Fornitore NC)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>