force-app/main/default/objects/Case/fields/Garanzia_macchina__c.field-meta.xml
<CustomField>
    <fullName>Garanzia_macchina__c</fullName>
    <label>Garanzia macchina</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>