force-app/main/default/objects/Case/fields/GG_di_reintegro__c.field-meta.xml
<CustomField>
    <fullName>GG_di_reintegro__c</fullName>
    <label>GG di reintegro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>