force-app/main/default/objects/Case/fields/Gravita_NC__c.field-meta.xml
<CustomField>
    <fullName>Gravita_NC__c</fullName>
    <label>Gravità NC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bassa</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>