force-app/main/default/objects/Case/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <label>IBAN</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IT 61 S 05387 68020 000000574455 (BPE)</fullName>
            </value>
            <value>
                <fullName>IT 75 O 02008 24220 000004754135 (UNICREDIT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>