force-app/main/default/objects/Case/fields/In_Warranty__c.field-meta.xml
<CustomField>
    <fullName>In_Warranty__c</fullName>
    <label>In Warranty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>