force-app/main/default/objects/Case/fields/Indirizzo_Offerta__c.field-meta.xml
<CustomField>
    <fullName>Indirizzo_Offerta__c</fullName>
    <label>Indirizzo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>