force-app/main/default/objects/Case/fields/Indirizzo_Spedizione__c.field-meta.xml
<CustomField>
    <fullName>Indirizzo_Spedizione__c</fullName>
    <label>Indirizzo Spedizione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>