force-app/main/default/objects/Case/fields/Installazione__c.field-meta.xml
<CustomField>
    <fullName>Installazione__c</fullName>
    <label>Installazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>