force-app/main/default/objects/Case/fields/isConfermaOrdine__c.field-meta.xml
<CustomField>
    <fullName>isConfermaOrdine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>pdfOfferta - indica se si tratta di un&apos;offerta o di una conferma d&apos;ordine</description>
    <label>isConfermaOrdine</label>
    <type>Checkbox</type>
</CustomField>