force-app/main/default/objects/Case/fields/isReadOnly__c.field-meta.xml
<CustomField>
    <fullName>isReadOnly__c</fullName>
    <formula>IsClosed</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isReadOnly</label>
    <type>Checkbox</type>
</CustomField>