force-app/main/default/objects/Case/fields/JobHours__c.field-meta.xml
<CustomField>
    <fullName>JobHours__c</fullName>
    <label>Job Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>