force-app/main/default/objects/Case/fields/Lack_of_quality__c.field-meta.xml
<CustomField>
    <fullName>Lack_of_quality__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>for internal use only</inlineHelpText>
    <label>Lack of product quality</label>
    <type>Checkbox</type>
</CustomField>