force-app/main/default/objects/Case/fields/Last_Modify_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Modify_Name_Formula__c</fullName>
    <formula>LastModifiedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modify Name Formula</label>
    <type>Text</type>
</CustomField>