force-app/main/default/objects/Case/fields/Localita__c.field-meta.xml
<CustomField>
    <fullName>Localita__c</fullName>
    <label>Località</label>
    <length>255</length>
    <type>Text</type>
</CustomField>