force-app/main/default/objects/Case/fields/Machine_Type__c.field-meta.xml
<CustomField>
    <fullName>Machine_Type__c</fullName>
    <label>Machine Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MTL</fullName>
            </value>
            <value>
                <fullName>METRIOS</fullName>
            </value>
            <value>
                <fullName>MTP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>