force-app/main/default/objects/Case/fields/Matricola_parte__c.field-meta.xml
<CustomField>
    <fullName>Matricola_parte__c</fullName>
    <label>Matricola parte</label>
    <length>100</length>
    <type>Text</type>
</CustomField>