force-app/main/default/objects/Case/fields/Matricola_Pezzo__c.field-meta.xml
<CustomField>
    <fullName>Matricola_Pezzo__c</fullName>
    <label>Matricola Pezzo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>