force-app/main/default/objects/Case/fields/Modalita_di_consegna__c.field-meta.xml
<CustomField>
    <fullName>Modalita_di_consegna__c</fullName>
    <label>Modalità di consegna</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 gg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>