force-app/main/default/objects/Case/fields/Modalita_di_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Modalita_di_pagamento__c</fullName>
    <label>Modalità di pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B.B. 30 gg D.F.F.</fullName>
            </value>
            <value>
                <fullName>RIBA 30 gg D.F.F.</fullName>
            </value>
            <value>
                <fullName>B.B. 60 gg D.F.F.</fullName>
            </value>
            <value>
                <fullName>RIBA 60 gg D.F.F.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>