force-app/main/default/objects/Case/fields/NC__c.field-meta.xml
<CustomField>
    <fullName>NC__c</fullName>
    <label>NC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>