force-app/main/default/objects/Case/fields/NC_rilevata_da__c.field-meta.xml
<CustomField>
    <fullName>NC_rilevata_da__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NC rilevata da</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>