force-app/main/default/objects/Case/fields/Net_price_for_RS__c.field-meta.xml
<CustomField>
    <fullName>Net_price_for_RS__c</fullName>
    <description>Last net price we quoted this RS - Ask again if expired</description>
    <inlineHelpText>Last net price we quoted this RS - Ask again if expired</inlineHelpText>
    <label>Net price for RS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>