force-app/main/default/objects/Case/fields/Note_assicuratore_qualita__c.field-meta.xml
<CustomField>
    <fullName>Note_assicuratore_qualita__c</fullName>
    <label>Note assicuratore qualità</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>