force-app/main/default/objects/Case/fields/Nr_Assistenza__c.field-meta.xml
<CustomField>
    <fullName>Nr_Assistenza__c</fullName>
    <label>Nr. Assistenza</label>
    <length>50</length>
    <type>Text</type>
</CustomField>