force-app/main/default/objects/Case/fields/Nr_RMA__c.field-meta.xml
<CustomField>
    <fullName>Nr_RMA__c</fullName>
    <label>Nr. RMA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>