force-app/main/default/objects/Case/fields/Numero_Giorni__c.field-meta.xml
<CustomField>
    <fullName>Numero_Giorni__c</fullName>
    <label>Numero Giorni</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>