force-app/main/default/objects/Case/fields/Numero_NC__c.field-meta.xml
<CustomField>
    <fullName>Numero_NC__c</fullName>
    <displayFormat>NC-{YYYY}{MM}-{0}</displayFormat>
    <label>Numero NC</label>
    <type>AutoNumber</type>
</CustomField>