force-app/main/default/objects/Case/fields/Numero_ordine__c.field-meta.xml
<CustomField>
    <fullName>Numero_ordine__c</fullName>
    <displayFormat>OR-{YYYY}{MM}-{0}</displayFormat>
    <label>Numero ordine</label>
    <type>AutoNumber</type>
</CustomField>