force-app/main/default/objects/Case/fields/Numero_scheda_intervento__c.field-meta.xml
<CustomField>
    <fullName>Numero_scheda_intervento__c</fullName>
    <displayFormat>SI-{YYYY}{MM}-{0}</displayFormat>
    <label>Numero scheda intervento</label>
    <type>AutoNumber</type>
</CustomField>