force-app/main/default/objects/Case/fields/Nuova_Email__c.field-meta.xml
<CustomField>
    <fullName>Nuova_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nuova Email</label>
    <type>Checkbox</type>
</CustomField>