force-app/main/default/objects/Case/fields/Nuova_Email_Da_Gestire__c.field-meta.xml
<CustomField>
    <fullName>Nuova_Email_Da_Gestire__c</fullName>
    <formula>IMAGE(
IF(Da_Gestire__c = TRUE,&quot;/img/samples/flag_red.gif&quot;,
&quot;/img/samples/flag_green.gif&quot;),&quot;priority flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nuova Email Da Gestire</label>
    <type>Text</type>
</CustomField>