force-app/main/default/objects/Case/fields/Offerta__c.field-meta.xml
<CustomField>
    <fullName>Offerta__c</fullName>
    <displayFormat>O-{YYYY}{MM}-{0}</displayFormat>
    <label>Numero Offerta</label>
    <type>AutoNumber</type>
</CustomField>