force-app/main/default/objects/Case/fields/Operatore_1__c.field-meta.xml
<CustomField>
    <fullName>Operatore_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risolto da operatore 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Operatore 1)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>