force-app/main/default/objects/Case/fields/Operatore_2__c.field-meta.xml
<CustomField>
    <fullName>Operatore_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risolto da operatore 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Operatore 2)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>