force-app/main/default/objects/Case/fields/Ordinante__c.field-meta.xml
<CustomField>
    <fullName>Ordinante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordinante</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Ordinante)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>