force-app/main/default/objects/Case/fields/Ordine_di_lavoro__c.field-meta.xml
<CustomField>
    <fullName>Ordine_di_lavoro__c</fullName>
    <label>Ordine di lavoro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>