force-app/main/default/objects/Case/fields/Ore_rilevazione__c.field-meta.xml
<CustomField>
    <fullName>Ore_rilevazione__c</fullName>
    <label>Ore rilevazione</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>