force-app/main/default/objects/Case/fields/Ore_risoluzione_operatore_2__c.field-meta.xml
<CustomField>
    <fullName>Ore_risoluzione_operatore_2__c</fullName>
    <label>Ore risoluzione operatore 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>