force-app/main/default/objects/Case/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <formula>IF( (ISBLANK( Owner:User.LastName )|| ( Owner:User.LastName==&apos;Partner Portal&apos; ) ), &quot;In Attesa&quot;, Owner:User.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>