force-app/main/default/objects/Case/fields/Paese__c.field-meta.xml
<CustomField>
    <fullName>Paese__c</fullName>
    <label>Paese</label>
    <length>255</length>
    <type>Text</type>
</CustomField>