force-app/main/default/objects/Case/fields/Peso_collo_Kg__c.field-meta.xml
<CustomField>
    <fullName>Peso_collo_Kg__c</fullName>
    <label>Peso collo (Kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>