force-app/main/default/objects/Case/fields/Provincia_Offerta__c.field-meta.xml
<CustomField>
    <fullName>Provincia_Offerta__c</fullName>
    <label>Provincia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>