force-app/main/default/objects/Case/fields/Reasons__c.field-meta.xml
<CustomField>
    <fullName>Reasons__c</fullName>
    <label>Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Need GR&amp;R</fullName>
            </value>
            <value>
                <fullName>Demo with advanced system</fullName>
            </value>
            <value>
                <fullName>Demo with advanced knowledge</fullName>
            </value>
            <value>
                <fullName>Demo with advanced software</fullName>
            </value>
            <value>
                <fullName>Limited rep. resources</fullName>
            </value>
            <value>
                <fullName>Non ha partecipato alla formazione</fullName>
            </value>
            <value>
                <fullName>Funzionalità complessa</fullName>
            </value>
            <value>
                <fullName>Istruzioni non chiare</fullName>
            </value>
            <value>
                <fullName>Nuovo problema</fullName>
            </value>
            <value>
                <fullName>New application</fullName>
            </value>
            <value>
                <fullName>custom application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>