force-app/main/default/objects/Case/fields/Related_Final_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Final_Customer_Account__c</fullName>
    <formula>Asset_Final_Customer__r.Account_Final_Customer__r.Name</formula>
    <label>Related Final Customer Account</label>
    <type>Text</type>
</CustomField>