force-app/main/default/objects/Case/fields/Reparto__c.field-meta.xml
<CustomField>
    <fullName>Reparto__c</fullName>
    <label>Reparto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>