force-app/main/default/objects/Case/fields/requested_closing_date__c.field-meta.xml
<CustomField>
    <fullName>requested_closing_date__c</fullName>
    <description>requested closing date</description>
    <label>requested closing date</label>
    <type>Date</type>
</CustomField>