force-app/main/default/objects/Case/fields/Risoluzione_NC__c.field-meta.xml
<CustomField>
    <fullName>Risoluzione_NC__c</fullName>
    <label>Risoluzione NC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediata</fullName>
            </value>
            <value>
                <fullName>Differita</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>