force-app/main/default/objects/Case/fields/RS_Validity__c.field-meta.xml
<CustomField>
    <fullName>RS_Validity__c</fullName>
    <description>After this date the RS must be evaluated again</description>
    <inlineHelpText>After this date the RS must be evaluated again</inlineHelpText>
    <label>RS expiration date</label>
    <type>Date</type>
</CustomField>